# Brussels_Bicycle_Forecasting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
brussels_bike_forecasting/data_fetching/: constants.py  data_fetching.py  fetch_bikes_measures.py  fetch_devices.py
brussels_bike_forecasting/data_preprocessing/: bikes_formatting.py
brussels_bike_forecasting/src/: data_fetching.py
notebooks/: data_fetching.ipynb
tests/data_fetching/: test_data_fetching.py  test_fetch_bikes.py  test_fetch_devices.py
tests/data_preprocessing/: test_bikes_formatting.py
